# b2v

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  test_e2e.sh
.github/workflows/: deploy-docs.yml
docs/: index.md
docs/.vitepress/: config.ts
docs/guide/: architecture.md  benchmarks.md  getting-started.md  recommended-platforms.md
docs/guide/code/: decoder.md  encoder.md  main.md  utils.md
src/: decoder.rs  encoder.rs  main.rs  utils.rs
