[package]
name = "b2v"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rayon = "1.8"
reed-solomon-erasure = "6.0"
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"
sha2 = "0.10"
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

